Grammar.txt
Program             ::= ProgramBlocks
ProgramBlocks       ::= (FunctionDeclaration | Statement)*

FunctionDeclaration ::= "func" Identifier "(" (Parameter ("," Parameter)*)? ")" "->" Type "{" StatementList "}"
Parameter           ::= Identifier ":" Type

StatementList       ::= Statement*
Statement           ::= Declaration | Assignment | IfStatement | PrintCall | ReturnStatement

Declaration         ::= "declare" Identifier ":" Type ";"
Assignment          ::= Identifier "=" Expression ";"
IfStatement         ::= "if" "(" Expression ")" "{" StatementList "}" ElsePart
ElsePart            ::= "else" "{" StatementList "}" | ε
PrintCall           ::= "print" "(" Expression ")" ";"
ReturnStatement     ::= "return" Expression ";"

Expression          ::= Term (("+" | "-") Term)*
Term                ::= Factor (("*" | "/") Factor)*
Factor              ::= Number | Identifier | "(" Expression ")" | Comparison | FunctionCall
FunctionCall        ::= Identifier "(" (Expression ("," Expression)*)? ")"
Comparison          ::= Expression ("==" | "!=" | "<" | ">" | "<=" | ">=") Expression
Type                ::= "int"
